Use NavigationManager to load NTP for new tabs from Tab Grid

This unifies the addition of a new Tab to WebStateList in Tab Grid
with that used in Tools menu and long tap menu of the Tab Grid icon on
the bottom toolbar. See tab_model.mm
-insertTabWithLoadParams:opener:openedByDOM:atIndex:inBackground:.

In order to have InfoBars added to a New Tab Page, new page must be
loaded before added to WebStateList because the latter triggers the
observers.

Bug: 867623
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ia5f3b0ee4a70bebd6713e5c8e242edd36d8f8ce5
Reviewed-on: https://chromium-review.googlesource.com/1157552
Commit-Queue: Peter Lee <pkl@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579895}
Former-commit-id: 778af7b9a2f1d7e7190ad64a7b6394f47293cffc