ios/chrome/browser/ui/tab_grid/tab_grid_mediator_unittest.mm
@@ -19,7 +19,6 @@
 #include "ios/chrome/browser/web_state_list/web_state_list.h"
 #import "ios/chrome/browser/web_state_list/web_state_opener.h"
 #import "ios/web/public/test/fakes/test_web_state.h"
-#import "ios/web/public/test/fakes/test_web_state_delegate.h"
 #include "ios/web/public/test/test_web_thread_bundle.h"
 #include "testing/gtest/include/gtest/gtest.h"
 #import "testing/gtest_mac.h"
@@ -83,29 +82,25 @@
 // Fake WebStateList delegate that attaches the tab ID tab helper.
 class TabIdFakeWebStateListDelegate : public FakeWebStateListDelegate {
  public:
-  explicit TabIdFakeWebStateListDelegate(web::WebStateDelegate* delegate)
-      : delegate_(delegate) {}
+  TabIdFakeWebStateListDelegate() {}
   ~TabIdFakeWebStateListDelegate() override {}
 
   // WebStateListDelegate implementation.
   void WillAddWebState(web::WebState* web_state) override {
     TabIdTabHelper::CreateForWebState(web_state);
-    web_state->SetDelegate(delegate_);
   }
-  void WebStateDetached(web::WebState* web_state) override {
-    web_state->SetDelegate(nil);
-  }
-
- private:
-  web::WebStateDelegate* delegate_;
 };
 
 class TabGridMediatorTest : public PlatformTest {
  public:
-  TabGridMediatorTest() {
+  TabGridMediatorTest() {}
+  ~TabGridMediatorTest() override {}
+
+  void SetUp() override {
+    PlatformTest::SetUp();
     browser_state_ = TestChromeBrowserState::Builder().Build();
     web_state_list_delegate_ =
-        std::make_unique<TabIdFakeWebStateListDelegate>(&delegate_);
+        std::make_unique<TabIdFakeWebStateListDelegate>();
     web_state_list_ =
         std::make_unique<WebStateList>(web_state_list_delegate_.get());
     tab_model_ = OCMClassMock([TabModel class]);
@@ -119,6 +114,8 @@ class TabGridMediatorTest : public PlatformTest {
       TabIdTabHelper::CreateForWebState(web_state.get());
       NSString* identifier =
           TabIdTabHelper::FromWebState(web_state.get())->tab_id();
+      // Tab IDs should be unique.
+      ASSERT_FALSE([identifiers containsObject:identifier]);
       [identifiers addObject:identifier];
       web_state_list_->InsertWebState(i, std::move(web_state),
                                       WebStateList::INSERT_FORCE_INDEX,
@@ -133,12 +130,10 @@ class TabGridMediatorTest : public PlatformTest {
     mediator_ = [[TabGridMediator alloc] initWithConsumer:consumer_];
     mediator_.tabModel = tab_model_;
   }
-  ~TabGridMediatorTest() override {}
 
  protected:
   web::TestWebThreadBundle thread_bundle_;
   std::unique_ptr<ios::ChromeBrowserState> browser_state_;
-  web::TestWebStateDelegate delegate_;
   std::unique_ptr<TabIdFakeWebStateListDelegate> web_state_list_delegate_;
   std::unique_ptr<WebStateList> web_state_list_;
   id tab_model_;
@@ -289,8 +284,8 @@ TEST_F(TabGridMediatorTest, UndoCloseAllItemsCommand) {
 }
 
 // Tests that when |-addNewItem| is called, the |web_state_list_| count is
-// incremented, the |active_index| is the newly added index, the new web state
-// has no opener, and the URL is the new tab page.
+// incremented, the |active_index| is at the end of |web_state_list_|, the new
+// web state has no opener, and the URL is the New Tab Page.
 // Tests that the consumer has added an item with the correct identifier.
 TEST_F(TabGridMediatorTest, AddNewItemAtEndCommand) {
   // Previously there were 3 items and the selected index was 1.
@@ -301,9 +296,7 @@ TEST_F(TabGridMediatorTest, AddNewItemAtEndCommand) {
   ASSERT_TRUE(web_state);
   EXPECT_EQ(web_state->GetBrowserState(), browser_state_.get());
   EXPECT_FALSE(web_state->HasOpener());
-  web::TestOpenURLRequest* request = delegate_.last_open_url_request();
-  ASSERT_TRUE(request);
-  EXPECT_EQ(kChromeUINewTabURL, request->params.url.spec());
+  EXPECT_EQ(kChromeUINewTabURL, web_state->GetVisibleURL().spec());
   NSString* identifier = TabIdTabHelper::FromWebState(web_state)->tab_id();
   EXPECT_FALSE([original_identifiers_ containsObject:identifier]);
   // Consumer checks.
@@ -325,9 +318,7 @@ TEST_F(TabGridMediatorTest, InsertNewItemCommand) {
   ASSERT_TRUE(web_state);
   EXPECT_EQ(web_state->GetBrowserState(), browser_state_.get());
   EXPECT_FALSE(web_state->HasOpener());
-  web::TestOpenURLRequest* request = delegate_.last_open_url_request();
-  ASSERT_TRUE(request);
-  EXPECT_EQ(kChromeUINewTabURL, request->params.url.spec());
+  EXPECT_EQ(kChromeUINewTabURL, web_state->GetVisibleURL().spec());
   NSString* identifier = TabIdTabHelper::FromWebState(web_state)->tab_id();
   EXPECT_FALSE([original_identifiers_ containsObject:identifier]);
   // Consumer checks.
@@ -336,7 +327,7 @@ TEST_F(TabGridMediatorTest, InsertNewItemCommand) {
   EXPECT_NSEQ(identifier, consumer_.items[0]);
 }
 
-// Tests that |-insertNewItemAtIndex:| is a no-op of the mediator's TabModel
+// Tests that |-insertNewItemAtIndex:| is a no-op if the mediator's TabModel
 // is nil.
 TEST_F(TabGridMediatorTest, InsertNewItemWithNoTabModelCommand) {
   mediator_.tabModel = nil;
